fix horizontal scroll

--- a/css/board.css
+++ b/css/board.css
@@ -15,7 +15,10 @@
   --footer-bg: #111520;
   --text-muted-custom: #8a92a3;
 } */
-
+body {
+  font-family: "Inter", sans-serif;
+  overflow-x: hidden;
+}
 .page-header {
   padding: 80px 0 40px;
   text-align: center;
@@ -82,6 +85,8 @@
   border-radius: 24px;
   z-index: -1;
   transition: var(--transition);
+  left: 0; 
+  overflow: hidden;
 }
 
 .director:hover .director-img {
@@ -114,7 +119,6 @@
   font-size: 1.05rem;
   line-height: 1.8;
 }
-
 
 @media (max-width: 992px) {
   .director,
