--- a/css/features.css
+++ b/css/features.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Inter", sans-serif;
+  overflow-x: hidden;
+}
 .features-section {
   background: #d6d8da;
   background: #a9bed2;
