--- a/css/values.css
+++ b/css/values.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Inter", sans-serif;
+  overflow-x: hidden;
+}
 h1{
    padding: 60px 0px  0px 0px;
    font-size: 4rem;
